fixed animation on small prd section of homepage

--- a/client/src/pages/Homepage/SmallerProductsSection/SmallerProductsSection.scss
+++ b/client/src/pages/Homepage/SmallerProductsSection/SmallerProductsSection.scss
@@ -24,7 +24,6 @@
 
                     .image-container{
                         width: 100%;
-                        overflow: hidden;
                         height: 100%;
                         display: flex;
                         align-items: center;
