--- a/client/src/pages/ProductDetails page/ProductDetailsPage.scss
+++ b/client/src/pages/ProductDetails page/ProductDetailsPage.scss
@@ -1,6 +1,6 @@
 .product-details-page{
     padding-top: 60px;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 @media only screen and (min-width: 768px){
